feat: align how to use a DBCard as button or anchor

--- a/packages/components/src/components/card/card.scss
+++ b/packages/components/src/components/card/card.scss
@@ -3,6 +3,10 @@
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "../../styles/internal/component";
 
+:is(a, button):has(.db-card) {
+	all: unset;
+}
+
 .db-card {
 	@extend %default-card;
 
