fix: showRequiredAsterisk property and add examples for showcases

--- a/showcases/angular-showcase/src/app/components/select/select.component.html
+++ b/showcases/angular-showcase/src/app/components/select/select.component.html
@@ -11,6 +11,7 @@
 		let-variantIndex="variantIndex"
 	>
 		<db-select
+			[showRequiredAsterisk]="exampleProps?.showRequiredAsterisk"
 			[label]="exampleProps?.label"
 			[placeholder]="exampleName"
 			[variant]="exampleProps?.variant"
