--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -277,8 +277,8 @@ $input-valid-types:
 }
 
 @mixin set-required-label($selector) {
-	&:has(#{$selector}:required):not([data-hide-asterisk="true"]),
-	&[data-required="true"]:not([data-hide-asterisk="true"]) {
+	&:has(#{$selector}:required),
+	&[data-required="true"] {
 		&:is(label),
 		> label {
 			&::after {
@@ -313,8 +313,11 @@ $input-valid-types:
 		--db-label-visible-above: 0;
 	}
 
+	&:not([data-hide-asterisk="true"]) {
+		@include set-required-label($selector);
+	}
+
 	@include set-floating-label-overwrites($selector);
-	@include set-required-label($selector);
 
 	@include get-validity($selector) {
 		&:has(
@@ -490,7 +493,9 @@ $input-valid-types:
 @mixin set-default-check-element() {
 	@extend %db-overwrite-font-size-md;
 
-	@include set-required-label(input);
+	&:not([data-hide-asterisk="true"]) {
+		@include set-required-label(input);
+	}
 
 	&:has(input:disabled) {
 		opacity: variables.$db-opacity-md;
