--- a/showcases/angular-showcase/src/app/components/input/input.component.html
+++ b/showcases/angular-showcase/src/app/components/input/input.component.html
@@ -11,6 +11,7 @@
 		let-variantIndex="variantIndex"
 	>
 		<db-input
+			[showRequiredAsterisk]="exampleProps?.showRequiredAsterisk"
 			[maxLength]="exampleProps?.maxLength"
 			[max]="exampleProps?.max"
 			[min]="exampleProps?.min"
