--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -11,6 +11,7 @@
 		let-variantIndex="variantIndex"
 	>
 		<db-switch
+			[showRequiredAsterisk]="exampleProps?.showRequiredAsterisk"
 			[visualAid]="exampleProps?.visualAid"
 			[checked]="exampleProps?.checked"
 			[disabled]="exampleProps?.disabled"
