--- a/showcases/angular-showcase/src/app/components/textarea/textarea.component.html
+++ b/showcases/angular-showcase/src/app/components/textarea/textarea.component.html
@@ -11,6 +11,7 @@
 		let-variantIndex="variantIndex"
 	>
 		<db-textarea
+			[showRequiredAsterisk]="exampleProps?.showRequiredAsterisk"
 			[variant]="exampleProps?.variant"
 			[label]="exampleProps?.label"
 			[required]="exampleProps?.required"
