--- a/packages/components/src/components/button/button.scss
+++ b/packages/components/src/components/button/button.scss
@@ -89,6 +89,7 @@
 
 	&[data-variant="outlined"],
 	&:not([data-variant]),
+	&[data-variant=""],
 	&[data-variant="ghost"] {
 		background-color: colors.$db-adaptive-bg-basic-transparent-full-default;
 	}
