fix: showRequiredAsterisk property and add examples for showcases (#4509)
* fix: showRequiredAsterisk property and add examples for showcases

* fix: issue with angular showcase

* auto update snapshots (#4515)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Maximilian Franzke <787658+mfranzke@users.noreply.github.com>

--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -279,8 +279,8 @@ $input-valid-types:
 }
 
 @mixin set-required-label($selector) {
-	&:has(#{$selector}:required):not([data-hide-asterisk="true"]),
-	&[data-required="true"]:not([data-hide-asterisk="true"]) {
+	&:has(#{$selector}:required),
+	&[data-required="true"] {
 		&:is(label),
 		> label {
 			&::after {
@@ -315,8 +315,11 @@ $input-valid-types:
 		--db-label-visible-above: 0;
 	}
 
+	&:not([data-hide-asterisk="true"]) {
+		@include set-required-label($selector);
+	}
+
 	@include set-floating-label-overwrites($selector);
-	@include set-required-label($selector);
 
 	@include get-validity($selector) {
 		&:has(
@@ -492,7 +495,9 @@ $input-valid-types:
 @mixin set-default-check-element() {
 	@extend %db-overwrite-font-size-md;
 
-	@include set-required-label(input);
+	&:not([data-hide-asterisk="true"]) {
+		@include set-required-label(input);
+	}
 
 	&:has(input:disabled) {
 		opacity: variables.$db-opacity-md;
