feat: add shell-sub-navigation

--- a/packages/components/src/components/control-panel-brand/control-panel-brand.scss
+++ b/packages/components/src/components/control-panel-brand/control-panel-brand.scss
@@ -19,6 +19,12 @@
 		--db-icon-color: #{colors.$db-brand-origin-default};
 	}
 
+	&:has(img, svg) {
+		&::before {
+			content: none;
+		}
+	}
+
 	img {
 		$logo-size: calc(
 			#{variables.$db-sizing-md} - #{variables.$db-sizing-3xs}
