--- a/packages/components/src/styles/index.scss
+++ b/packages/components/src/styles/index.scss
@@ -40,3 +40,5 @@
 @forward "../components/control-panel-primary-actions/control-panel-primary-actions";
 @forward "../components/control-panel-secondary-actions/control-panel-secondary-actions";
 @forward "../components/navigation-item-group/navigation-item-group";
+@forward "../components/shell-sub-navigation/shell-sub-navigation";
+
