--- a/packages/components/src/styles/internal/_custom-elements.scss
+++ b/packages/components/src/styles/internal/_custom-elements.scss
@@ -1,4 +1,6 @@
 $custom-elements: //hygen-insert
+db-shell-sub-navigation,
+
 
 	db-navigation-item-group, db-control-panel-secondary-actions,
 	db-control-panel-primary-actions, db-control-panel-meta-navigation,
@@ -27,3 +29,4 @@ $drawer: "db-drawer > .db-drawer, > .db-drawer";
 $control-panel-mobile-button: "> db-button > .db-control-panel-mobile-button,> .db-control-panel-mobile-button";
 $overflow-scroll-right-button: "> .overflow-scroll-right-button, > db-button > .overflow-scroll-right-button";
 $overflow-scroll-left-button: "> .overflow-scroll-left-button, > db-button > .overflow-scroll-left-button";
+$shell-sub-navigation: "> db-shell-sub-navigation > .db-shell-sub-navigation, > .db-shell-sub-navigation";
