--- a/showcases/angular-showcase/src/app/components/card/card.component.html
+++ b/showcases/angular-showcase/src/app/components/card/card.component.html
@@ -11,7 +11,7 @@
 		let-variantIndex="variantIndex"
 	>
 		@if (exampleProps?.behavior === "interactive") {
-			<button>
+			<button type="button" aria-label="button copy">
 				<db-card
 					[behavior]="exampleProps?.behavior"
 					[elevationLevel]="exampleProps?.elevationLevel"
