--- a/packages/components/src/styles/internal/_custom-elements.scss
+++ b/packages/components/src/styles/internal/_custom-elements.scss
@@ -1,10 +1,9 @@
 $custom-elements: //hygen-insert
-db-shell-sub-navigation,
 
-
-	db-navigation-item-group, db-control-panel-secondary-actions,
-	db-control-panel-primary-actions, db-control-panel-meta-navigation,
-	db-control-panel-mobile, db-custom-select-list-item, db-custom-select-list,
+	db-shell-sub-navigation, db-navigation-item-group,
+	db-control-panel-secondary-actions, db-control-panel-primary-actions,
+	db-control-panel-meta-navigation, db-control-panel-mobile,
+	db-custom-select-list-item, db-custom-select-list,
 	db-custom-select-dropdown, db-custom-select-form-field, db-custom-select,
 	db-stack, db-switch, db-tab-panel, db-tabs, db-tab-list, db-tab-item,
 	db-tab-bar, db-tooltip, db-popover, db-textarea, db-navigation,
