--- a/showcases/patternhub/styles/playgrounds.scss
+++ b/showcases/patternhub/styles/playgrounds.scss
@@ -6,7 +6,7 @@ section.playground {
 	gap: 1rem; /* Optional spacing between items */
 
 	h2 {
-		grid-row: 1fr;
+		grid-column: span 2;
 	}
 
 	a {
@@ -17,6 +17,10 @@ section.playground {
 		img {
 			width: 50px;
 			float: left;
+		}
+
+		.db-card {
+			height: 100%;
 		}
 	}
 }
