refactor: variables for transparent-hovered/-pressed

--- a/packages/foundations/scss/colors/_placeholder.scss
+++ b/packages/foundations/scss/colors/_placeholder.scss
@@ -64,11 +64,17 @@
 			--db-adaptive-bg-basic-transparent-semi-default: var(
 				--db-#{$variant}-bg-basic-transparent-semi-default
 			);
-			--db-adaptive-bg-basic-transparent-hovered: var(
-				--db-#{$variant}-bg-basic-transparent-hovered
+			--db-adaptive-bg-basic-transparent-full-hovered: var(
+				--db-#{$variant}-bg-basic-transparent-full-hovered
 			);
-			--db-adaptive-bg-basic-transparent-pressed: var(
-				--db-#{$variant}-bg-basic-transparent-pressed
+			--db-adaptive-bg-basic-transparent-full-pressed: var(
+				--db-#{$variant}-bg-basic-transparent-full-pressed
+			);
+			--db-adaptive-bg-basic-transparent-semi-hovered: var(
+				--db-#{$variant}-bg-basic-transparent-semi-hovered
+			);
+			--db-adaptive-bg-basic-transparent-semi-pressed: var(
+				--db-#{$variant}-bg-basic-transparent-semi-pressed
 			);
 
 			// on-bg basic
