--- a/packages/foundations/scss/colors/_variables.scss
+++ b/packages/foundations/scss/colors/_variables.scss
@@ -50,11 +50,17 @@ $db-adaptive-bg-basic-transparent-full-default: var(
 $db-adaptive-bg-basic-transparent-semi-default: var(
 	--db-adaptive-bg-basic-transparent-semi-default
 );
-$db-adaptive-bg-basic-transparent-hovered: var(
-	--db-adaptive-bg-basic-transparent-hovered
+$db-adaptive-bg-basic-transparent-full-hovered: var(
+	--db-adaptive-bg-basic-transparent-full-hovered
 );
-$db-adaptive-bg-basic-transparent-pressed: var(
-	--db-adaptive-bg-basic-transparent-pressed
+$db-adaptive-bg-basic-transparent-full-pressed: var(
+	--db-adaptive-bg-basic-transparent-full-pressed
+);
+$db-adaptive-bg-basic-transparent-semi-hovered: var(
+	--db-adaptive-bg-basic-transparent-semi-hovered
+);
+$db-adaptive-bg-basic-transparent-semi-pressed: var(
+	--db-adaptive-bg-basic-transparent-semi-pressed
 );
 
 // on-bg basic
