--- a/packages/foundations/scss/colors/speaking-colors/additional/_violet.speaking-colors.scss
+++ b/packages/foundations/scss/colors/speaking-colors/additional/_violet.speaking-colors.scss
@@ -14,11 +14,17 @@ $db-violet-bg-basic-transparent-full-default: var(
 $db-violet-bg-basic-transparent-semi-default: var(
 	--db-violet-bg-basic-transparent-semi-default
 );
-$db-violet-bg-basic-transparent-hovered: var(
-	--db-violet-bg-basic-transparent-hovered
+$db-violet-bg-basic-transparent-full-hovered: var(
+	--db-violet-bg-basic-transparent-full-hovered
 );
-$db-violet-bg-basic-transparent-pressed: var(
-	--db-violet-bg-basic-transparent-pressed
+$db-violet-bg-basic-transparent-full-pressed: var(
+	--db-violet-bg-basic-transparent-full-pressed
+);
+$db-violet-bg-basic-transparent-semi-hovered: var(
+	--db-violet-bg-basic-transparent-semi-hovered
+);
+$db-violet-bg-basic-transparent-semi-pressed: var(
+	--db-violet-bg-basic-transparent-semi-pressed
 );
 $db-violet-on-bg-basic-emphasis-100-default: var(
 	--db-violet-on-bg-basic-emphasis-100-default
