--- a/packages/foundations/scss/colors/speaking-colors/additional/_yellow.speaking-colors.scss
+++ b/packages/foundations/scss/colors/speaking-colors/additional/_yellow.speaking-colors.scss
@@ -14,11 +14,17 @@ $db-yellow-bg-basic-transparent-full-default: var(
 $db-yellow-bg-basic-transparent-semi-default: var(
 	--db-yellow-bg-basic-transparent-semi-default
 );
-$db-yellow-bg-basic-transparent-hovered: var(
-	--db-yellow-bg-basic-transparent-hovered
+$db-yellow-bg-basic-transparent-full-hovered: var(
+	--db-yellow-bg-basic-transparent-full-hovered
 );
-$db-yellow-bg-basic-transparent-pressed: var(
-	--db-yellow-bg-basic-transparent-pressed
+$db-yellow-bg-basic-transparent-full-pressed: var(
+	--db-yellow-bg-basic-transparent-full-pressed
+);
+$db-yellow-bg-basic-transparent-semi-hovered: var(
+	--db-yellow-bg-basic-transparent-semi-hovered
+);
+$db-yellow-bg-basic-transparent-semi-pressed: var(
+	--db-yellow-bg-basic-transparent-semi-pressed
 );
 $db-yellow-on-bg-basic-emphasis-100-default: var(
 	--db-yellow-on-bg-basic-emphasis-100-default
