--- a/packages/foundations/scss/colors/speaking-colors/semantic/_successful.speaking-colors.scss
+++ b/packages/foundations/scss/colors/speaking-colors/semantic/_successful.speaking-colors.scss
@@ -32,11 +32,17 @@ $db-successful-bg-basic-transparent-full-default: var(
 $db-successful-bg-basic-transparent-semi-default: var(
 	--db-successful-bg-basic-transparent-semi-default
 );
-$db-successful-bg-basic-transparent-hovered: var(
-	--db-successful-bg-basic-transparent-hovered
+$db-successful-bg-basic-transparent-full-hovered: var(
+	--db-successful-bg-basic-transparent-full-hovered
 );
-$db-successful-bg-basic-transparent-pressed: var(
-	--db-successful-bg-basic-transparent-pressed
+$db-successful-bg-basic-transparent-full-pressed: var(
+	--db-successful-bg-basic-transparent-full-pressed
+);
+$db-successful-bg-basic-transparent-semi-hovered: var(
+	--db-successful-bg-basic-transparent-semi-hovered
+);
+$db-successful-bg-basic-transparent-semi-pressed: var(
+	--db-successful-bg-basic-transparent-semi-pressed
 );
 $db-successful-on-bg-basic-emphasis-100-default: var(
 	--db-successful-on-bg-basic-emphasis-100-default
