--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -23,7 +23,7 @@
 
 	position: relative;
 
-	&[data-icon]:not([data-hide-icon="true"]) {
+	&[data-icon]:not([data-show-icon="false"]) {
 		--db-form-component-min-inline-size: #{variables.$db-sizing-2xl};
 	}
 
