--- a/showcases/angular-showcase/src/app/components/input/input.component.html
+++ b/showcases/angular-showcase/src/app/components/input/input.component.html
@@ -24,6 +24,7 @@
 			[disabled]="exampleProps?.disabled"
 			[value]="exampleProps?.value"
 			[icon]="exampleProps?.icon"
+			[showIcon]="exampleProps?.showIcon"
 			[iconTrailing]="exampleProps?.iconTrailing"
 			[showIconTrailing]="exampleProps?.showIconTrailing"
 			[readOnly]="exampleProps?.readOnly"
